fix scrollbar for SharedFiles

--- a/src/Pages/PrivateCabinet/Components/SharedFiles/SideList/SideList.module.sass
+++ b/src/Pages/PrivateCabinet/Components/SharedFiles/SideList/SideList.module.sass
@@ -1,11 +1,21 @@
 .wrapper
     display: flex
     flex-direction: column
-    height: 100%
+    height: 83%
     min-width: 300px
     border-right: 1px solid #e5e5e5
     width: 30%
     overflow-y: scroll
+    &::-webkit-scrollbar-track
+        background: #0A3AAB
+    &::-webkit-scrollbar-track
+        -webkit-box-shadow: none
+        background-color: #F5F5F5
+    &::-webkit-scrollbar
+        width: 3px
+        background-color: #FFFFFF
+    &::-webkit-scrollbar-thumb
+        background-color: #4086F1
 .wrapper_big
     width: 35%
 .wrapper_small
